<resources>
    <string name="app_name" translatable="false">Polyscribe</string>

    <string name="profile_picture">Your profile picture</string>
    <string name="user_name">Name</string>
    <string name="user_email">Email address</string>
    <string name="user_picture">Profile picture</string>
    <string name="action_sign_out">Sign out</string>
    <string name="confirm_sign_out_message">Are you sure you want to sign out?</string>
    <string name="action_delete_account">Delete account</string>
    <string name="confirm_delete_account_message">You are about to delete your account. This can\'t be undone. Continue?</string>
    <string name="cancel">Cancel</string>
    <string name="or">or</string>
    <string name="close">Close</string>
    <string name="add">Add</string>
    <string name="add_file">Add file</string>
    <string name="add_picture">Add picture</string>
    <string name="delete">Delete</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="loading">Loading…</string>
    <string name="sending">Sending…</string>
    <string name="success_file">File sent successfully</string>
    <string name="success_user_updated">Details updated successfully</string>
    <string name="success_sign_up">Successfully logged in</string>
    <string name="success_sign_out">Successfully logged out</string>
    <string name="success_deleted_account">Account deleted successfully</string>

    <string name="error_generic">An issue occurred</string>
    <string name="error_sign_up">Sign up canceled or failed</string>
    <string name="error_no_account_file">An account is mandatory in order to add a file</string>
    <string name="error_no_account_profile">An account is mandatory in order to update your profile</string>
    <string name="error_max_files">You have reached the file upload limit.</string>
    <string name="error_max_size">Size limit is 50MB</string>
    <string name="no_network">No network available</string>
    <string name="try_again">Try again</string>
    <string name="no_files">To send a new file, please press the button "+"</string>
    <string name="error_number_of_copies">The number of copies must be superior to 0</string>
    <string name="error_no_file">The file must be added</string>
    <string name="no_pdf_app">No app found to read PDF files</string>
    <string name="error_open_pdf">Impossible to open PDF file</string>

    <string name="send_fragment_label">Send a document</string>
    <string name="detail_fragment_label">Detail of the file</string>
    <string name="action_send">Send</string>
    <string name="action_save">Save</string>
    <string name="select_file">Select file</string>
    <string name="change_file">Pick another file</string>
    <string name="select_image">Select image</string>
    <string name="change_image">Pick another image</string>
    <string name="preview_file">File preview:</string>
    <string name="preview_image">Image preview</string>
    <string name="uploaded_file">File uploaded</string>
    <string name="select_time">Select a time</string>
    <string name="select_date">Select a date</string>

    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_email">Sign in with email</string>
    <string name="sign_in_title">Enter your name in order to use Polyscribe.</string>
    <string name="sign_in_guest">Continue</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="copies">Copies</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="hint_date">Date</string>
    <string name="hint_time">Time</string>
    <string name="hint_color">Color</string>
    <string name="hint_double_sided">Double sided</string>
    <string name="hint_number_of_copies">Number of copies</string>
    <string name="hint_comments">Comments</string>
    <string name="hint_first_last_name">First and last name</string>
    <string name="hint_datetime">Collect date</string>

    <string name="contentDescription_button_add">Click here to send a new document</string>
    <string name="contentDescription_go_back">Go back</string>
    <string name="contentDescription_remove_file">Click here to remove the current file</string>
    <string name="contentDescription_file_preview">Preview of the file</string>
    <string name="contentDescription_file_preview_pdf">Preview of the PDF file</string>
    <string name="contentDescription_add_copy">Add a copy</string>
    <string name="contentDescription_remove_copy">Remove a copy</string>
    <string name="contentDescription_add_file">Click here to attach a document</string>
    <string name="contentDescription_add_picture">Click here to attach a picture</string>
    <string name="action_continue">Continue</string>

    <string name="sent_at">Sent on %1$s at %2$s</string>
    <string name="by">By %1$s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="collect_date_title">Collect date:</string>
    <string name="detail_collect_date">%1$s at %2$s</string>
    <string name="print_options">Print options:</string>
    <string name="detail_comments">Comments:</string>
    <string name="feature_coming_soon">Feature coming soon</string>
</resources>